Revert "Migrate build and runtime config to Java 25"
This reverts commit 38520337cd2343baeda784e13a11cd0859176221.

Co-authored-by: MBoegers <7557397+MBoegers@users.noreply.github.com>